<?xml version="1.0"?>
<package>
  <name>airskin</name>
  <version>0.0.0</version>
  <description>The airskin (tactile skin) package.</description>

  <maintainer email="michael.zillich@tuwien.ac.at">mz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
