<?xml version="1.0"?>
<package>
  <name>cf_control</name>
  <version>0.0.0</version>
  <description>The cf_control package</description>
  <maintainer email="lenz@cognitionfactory.eu">Claus Lenz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
