<?xml version="1.0"?>
<package>
  <name>kclhand_description</name>
  <version>0.0.0</version>
  <description>The kclhand_description package</description>

  <maintainer email="jie.sun@kcl.ac.uk">jiesun</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>

  <run_depend>xacro</run_depend>

</package>
