<?xml version="1.0"?>
<package>
  <name>robotino_arm_description</name>
  <version>0.1.0</version>
  <description>The robotino_arm_description package</description>
  <maintainer email="lenz@cognitionfactory.eu">Claus Lenz</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xacro</run_depend>
  <export></export>
</package>
