<?xml version="1.0"?>
<package>
  <name>robotino_safety</name>
  <version>0.0.0</version>
  <description>The robotino_safety (tactile skin) package.</description>

  <maintainer email="michael.zillich@tuwien.ac.at">mz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
